# Data-Science-project

./: .gitignore  README.md  app.py  application.py  error_log.txt  pyproject.toml  requirements.txt  setup.py
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb
src/: exception.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
static/css/: style.css
templates/: home.html  index.html
